[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "decemvirate"
description = "A FLOSS Pathfinder TTRPG helper"
authors = [
	{ name = 'Sven "DrMcCoy" Hesse', email = "drmccoy@drmccoy.de" }
]
readme = "README.md"
license = { file = "COPYING" }
classifiers = [
	"Private :: Do No Upload",
	"License :: OSI Approved :: GNU Affero General Public License v3.0 or later (AGPL-3.0-or-later)",
	"Topic :: Games/Entertainment :: Role-Playing"
]
keywords = [ "rpg", "ttrpg", "roleplaying", "pathfinder", "pathfinder1e", "paizo", "translation" ]
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
	"types-setuptools",
	"isort",
	"autopep8",
	"flake8",
	"mypy",
	"pylint"
]

[project.urls]
homepage = "https://github.com/DrMcCoy/decemvirate"

[project.scripts]
decemvirate = "decemvirate:main"

[tool.setuptools-git-versioning]
enabled = true
version_callback = "src.version:get_version"
